lib/open_ehr/parser/nshared_token.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module SharedToken
  include Treetop::Runtime

  def root
    @root ||= :any_identifier
  end

  def _nt_any_identifier
    start_index = index
    if node_cache[:any_identifier].has_key?(index)
      cached = node_cache[:any_identifier][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_type_identifier
    if r1
      r0 = r1
    else
      r2 = _nt_V_ATTRIBUTE_IDENTIFIER
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:any_identifier][start_index] = r0

    r0
  end

  module TypeIdentifier0
    def V_TYPE_IDENTIFIER
      elements[1]
    end

  end

  module TypeIdentifier1
    def V_GENERIC_TYPE_IDENTIFIER
      elements[1]
    end

  end

  def _nt_type_identifier
    start_index = index
    if node_cache[:type_identifier].has_key?(index)
      cached = node_cache[:type_identifier][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?('(', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('(')
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_V_TYPE_IDENTIFIER
      s1 << r3
      if r3
        if has_terminal?(')', false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(')')
          r4 = nil
        end
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(TypeIdentifier0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5, s5 = index, []
      if has_terminal?('(', false, index)
        r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('(')
        r6 = nil
      end
      s5 << r6
      if r6
        r7 = _nt_V_GENERIC_TYPE_IDENTIFIER
        s5 << r7
        if r7
          if has_terminal?(')', false, index)
            r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(')')
            r8 = nil
          end
          s5 << r8
        end
      end
      if s5.last
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        r5.extend(TypeIdentifier1)
      else
        @index = i5
        r5 = nil
      end
      if r5
        r0 = r5
      else
        r9 = _nt_V_TYPE_IDENTIFIER
        if r9
          r0 = r9
        else
          r10 = _nt_V_GENERIC_TYPE_IDENTIFIER
          if r10
            r0 = r10
          else
            @index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:type_identifier][start_index] = r0

    r0
  end

  def _nt_boolean_value
    start_index = index
    if node_cache[:boolean_value].has_key?(index)
      cached = node_cache[:boolean_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_SYM_TRUE
    if r1
      r0 = r1
    else
      r2 = _nt_SYM_FALSE
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:boolean_value][start_index] = r0

    r0
  end

  module BooleanListValue0
    def boolean_value
      elements[1]
    end
  end

  module BooleanListValue1
    def boolean_value
      elements[0]
    end

  end

  module BooleanListValue2
    def boolean_value
      elements[0]
    end

    def SYM_LIST_CONTINUE
      elements[2]
    end
  end

  def _nt_boolean_list_value
    start_index = index
    if node_cache[:boolean_list_value].has_key?(index)
      cached = node_cache[:boolean_list_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_boolean_value
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        i4, s4 = index, []
        if has_terminal?(',', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r5 = nil
        end
        s4 << r5
        if r5
          r6 = _nt_boolean_value
          s4 << r6
        end
        if s4.last
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
          r4.extend(BooleanListValue0)
        else
          @index = i4
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      if s3.empty?
        @index = i3
        r3 = nil
      else
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(BooleanListValue1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i7, s7 = index, []
      r8 = _nt_boolean_value
      s7 << r8
      if r8
        if has_terminal?(',', false, index)
          r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r9 = nil
        end
        s7 << r9
        if r9
          r10 = _nt_SYM_LIST_CONTINUE
          s7 << r10
        end
      end
      if s7.last
        r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
        r7.extend(BooleanListValue2)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r0 = r7
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:boolean_list_value][start_index] = r0

    r0
  end

  module IntegerValue0
    def V_INTEGER
      elements[1]
    end
  end

  def _nt_integer_value
    start_index = index
    if node_cache[:integer_value].has_key?(index)
      cached = node_cache[:integer_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i2 = index
    if has_terminal?('+', false, index)
      r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('+')
      r3 = nil
    end
    if r3
      r2 = r3
    else
      if has_terminal?('-', false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('-')
        r4 = nil
      end
      if r4
        r2 = r4
      else
        @index = i2
        r2 = nil
      end
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r5 = _nt_V_INTEGER
      s0 << r5
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IntegerValue0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:integer_value][start_index] = r0

    r0
  end

  module IntegerListValue0
    def white_space
      elements[1]
    end

    def integer_value
      elements[2]
    end
  end

  module IntegerListValue1
    def integer_value
      elements[0]
    end

  end

  module IntegerListValue2
    def integer_value
      elements[0]
    end

    def white_space
      elements[2]
    end

    def SYM_LIST_CONTINUE
      elements[3]
    end
  end

  def _nt_integer_list_value
    start_index = index
    if node_cache[:integer_list_value].has_key?(index)
      cached = node_cache[:integer_list_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_integer_value
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        i4, s4 = index, []
        if has_terminal?(',', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r5 = nil
        end
        s4 << r5
        if r5
          r6 = _nt_white_space
          s4 << r6
          if r6
            r7 = _nt_integer_value
            s4 << r7
          end
        end
        if s4.last
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
          r4.extend(IntegerListValue0)
        else
          @index = i4
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IntegerListValue1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i8, s8 = index, []
      r9 = _nt_integer_value
      s8 << r9
      if r9
        if has_terminal?(',', false, index)
          r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r10 = nil
        end
        s8 << r10
        if r10
          r11 = _nt_white_space
          s8 << r11
          if r11
            r12 = _nt_SYM_LIST_CONTINUE
            s8 << r12
          end
        end
      end
      if s8.last
        r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
        r8.extend(IntegerListValue2)
      else
        @index = i8
        r8 = nil
      end
      if r8
        r0 = r8
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:integer_list_value][start_index] = r0

    r0
  end

  module IntegerIntervalValue0
    def SYM_INTERVAL_DELIM1
      elements[0]
    end

    def integer_value1
      elements[2]
    end

    def SYM_ELLIPSIS
      elements[3]
    end

    def integer_value2
      elements[5]
    end

    def SYM_INTERVAL_DELIM2
      elements[6]
    end
  end

  module IntegerIntervalValue1
    def SYM_INTERVAL_DELIM1
      elements[0]
    end

    def integer_value
      elements[2]
    end

    def SYM_INTERVAL_DELIM2
      elements[3]
    end
  end

  def _nt_integer_interval_value
    start_index = index
    if node_cache[:integer_interval_value].has_key?(index)
      cached = node_cache[:integer_interval_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_SYM_INTERVAL_DELIM
    s1 << r2
    if r2
      r4 = _nt_SYM_GT
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
      if r3
        r5 = _nt_integer_value
        s1 << r5
        if r5
          r6 = _nt_SYM_ELLIPSIS
          s1 << r6
          if r6
            r8 = _nt_SYM_LT
            if r8
              r7 = r8
            else
              r7 = instantiate_node(SyntaxNode,input, index...index)
            end
            s1 << r7
            if r7
              r9 = _nt_integer_value
              s1 << r9
              if r9
                r10 = _nt_SYM_INTERVAL_DELIM
                s1 << r10
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IntegerIntervalValue0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i11, s11 = index, []
      r12 = _nt_SYM_INTERVAL_DELIM
      s11 << r12
      if r12
        i14 = index
        r15 = _nt_SYM_LT
        if r15
          r14 = r15
        else
          r16 = _nt_SYM_LE
          if r16
            r14 = r16
          else
            r17 = _nt_SYM_GT
            if r17
              r14 = r17
            else
              r18 = _nt_SYM_GE
              if r18
                r14 = r18
              else
                @index = i14
                r14 = nil
              end
            end
          end
        end
        if r14
          r13 = r14
        else
          r13 = instantiate_node(SyntaxNode,input, index...index)
        end
        s11 << r13
        if r13
          r19 = _nt_integer_value
          s11 << r19
          if r19
            r20 = _nt_SYM_INTERVAL_DELIM
            s11 << r20
          end
        end
      end
      if s11.last
        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
        r11.extend(IntegerIntervalValue1)
      else
        @index = i11
        r11 = nil
      end
      if r11
        r0 = r11
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:integer_interval_value][start_index] = r0

    r0
  end

  module RealValue0
    def V_REAL
      elements[1]
    end
  end

  def _nt_real_value
    start_index = index
    if node_cache[:real_value].has_key?(index)
      cached = node_cache[:real_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('+', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('+')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('-', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('-')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      r4 = _nt_V_REAL
      s0 << r4
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(RealValue0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:real_value][start_index] = r0

    r0
  end

  module RealListValue0
    def white_space
      elements[1]
    end

    def real_value
      elements[2]
    end
  end

  module RealListValue1
    def real_value
      elements[0]
    end

  end

  module RealListValue2
    def real_value
      elements[0]
    end

    def white_space
      elements[2]
    end

    def SYM_LIST_CONTINUE
      elements[3]
    end
  end

  def _nt_real_list_value
    start_index = index
    if node_cache[:real_list_value].has_key?(index)
      cached = node_cache[:real_list_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_real_value
    s1 << r2
    if r2
      s3, i3 = [], index
      loop do
        i4, s4 = index, []
        if has_terminal?(',', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r5 = nil
        end
        s4 << r5
        if r5
          r6 = _nt_white_space
          s4 << r6
          if r6
            r7 = _nt_real_value
            s4 << r7
          end
        end
        if s4.last
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
          r4.extend(RealListValue0)
        else
          @index = i4
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      if s3.empty?
        @index = i3
        r3 = nil
      else
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(RealListValue1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i8, s8 = index, []
      r9 = _nt_real_value
      s8 << r9
      if r9
        if has_terminal?(',', false, index)
          r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r10 = nil
        end
        s8 << r10
        if r10
          r11 = _nt_white_space
          s8 << r11
          if r11
            r12 = _nt_SYM_LIST_CONTINUE
            s8 << r12
          end
        end
      end
      if s8.last
        r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
        r8.extend(RealListValue2)
      else
        @index = i8
        r8 = nil
      end
      if r8
        r0 = r8
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:real_list_value][start_index] = r0

    r0
  end

  module RealIntervalValue0
    def SYM_INTERVAL_DELIM1
      elements[0]
    end

    def real_value1
      elements[2]
    end

    def SYM_ELLIPSIS
      elements[3]
    end

    def real_value2
      elements[5]
    end

    def SYM_INTERVAL_DELIM2
      elements[6]
    end
  end

  module RealIntervalValue1
    def SYM_INTERVAL_DELIM1
      elements[0]
    end

    def real_value
      elements[2]
    end

    def SYM_INTERVAL_DELIM2
      elements[3]
    end
  end

  module RealIntervalValue2
    def SYM_INTERVAL_DELIM1
      elements[0]
    end

    def real_value
      elements[1]
    end

    def SYM_INTERVAL_DELIM2
      elements[2]
    end
  end

  def _nt_real_interval_value
    start_index = index
    if node_cache[:real_interval_value].has_key?(index)
      cached = node_cache[:real_interval_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_SYM_INTERVAL_DELIM
    s1 << r2
    if r2
      r4 = _nt_SYM_GT
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
      if r3
        r5 = _nt_real_value
        s1 << r5
        if r5
          r6 = _nt_SYM_ELLIPSIS
          s1 << r6
          if r6
            r8 = _nt_SYM_LT
            if r8
              r7 = r8
            else
              r7 = instantiate_node(SyntaxNode,input, index...index)
            end
            s1 << r7
            if r7
              r9 = _nt_real_value
              s1 << r9
              if r9
                r10 = _nt_SYM_INTERVAL_DELIM
                s1 << r10
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(RealIntervalValue0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i11, s11 = index, []
      r12 = _nt_SYM_INTERVAL_DELIM
      s11 << r12
      if r12
        i14 = index
        r15 = _nt_SYM_LT
        if r15
          r14 = r15
        else
          r16 = _nt_SYM_LE
          if r16
            r14 = r16
          else
            r17 = _nt_SYM_GT
            if r17
              r14 = r17
            else
              r18 = _nt_SYM_GE
              if r18
                r14 = r18
              else
                @index = i14
                r14 = nil
              end
            end
          end
        end
        if r14
          r13 = r14
        else
          r13 = instantiate_node(SyntaxNode,input, index...index)
        end
        s11 << r13
        if r13
          r19 = _nt_real_value
          s11 << r19
          if r19
            r20 = _nt_SYM_INTERVAL_DELIM
            s11 << r20
          end
        end
      end
      if s11.last
        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
        r11.extend(RealIntervalValue1)
      else
        @index = i11
        r11 = nil
      end
      if r11
        r0 = r11
      else
        i21, s21 = index, []
        r22 = _nt_SYM_INTERVAL_DELIM
        s21 << r22
        if r22
          r23 = _nt_real_value
          s21 << r23
          if r23
            r24 = _nt_SYM_INTERVAL_DELIM
            s21 << r24
          end
        end
        if s21.last
          r21 = instantiate_node(SyntaxNode,input, i21...index, s21)
          r21.extend(RealIntervalValue2)
        else
          @index = i21
          r21 = nil
        end
        if r21
          r0 = r21
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:real_interval_value][start_index] = r0

    r0
  end

  def _nt_character_value
    start_index = index
    if node_cache[:character_value].has_key?(index)
      cached = node_cache[:character_value][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_V_CHAR
